# django-catch-a-log

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
django_catch_a_log/: admin.py  app_settings.py  apps.py  cid.py  decorators.py  log_filters.py  log_formatters.py  log_handler.py  middlewares.py  model_audit.py  models.py  request_logger.py
django_catch_a_log/management/commands/: prune_catch_a_log.py
django_catch_a_log/migrations/: 0001_initial.py
django_catch_a_log/templates/admin/catch_a_log/: app_index.html
django_catch_a_log/templates/catch_a_log/: audit_change_form.html  change_form.html  logger_change_form.html
tests/: __init__.py  manage.py  settings.py  test_admin.py  test_cid.py  test_decorator.py  test_log_filters.py  test_log_formatters.py  test_log_handler.py  test_middlewares.py  test_model_audit.py  test_prune_command.py  test_request_logger.py
