[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-catch-a-log"
version = "0.1.0"
description = "Reusable Django app for request, logging, and audit trail capture in admin."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["django", "logging", "audit", "middleware"]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


dependencies = [
    "Django>=4.2,<6.0",
]


[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["django_catch_a_log*"]

[tool.setuptools.package-data]
django_catch_a_log = [
    "migrations/*.py",
    "static/**/*",
    "templates/**/*.html",
]

[dependency-groups]
dev = [
    "coverage>=7.13.4",
    "django-stubs>=5.2.9",
    "factory-boy>=3.3.3",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
extend-exclude = [
    "*/migrations/*",
]

[tool.ruff.lint]
# F: Pyflakes, E/W: Pycodestyle, I: isort, DJ: Django
# UP: pyupgrade, B: bugbear, SIM: simplify
select = ["F", "E", "W", "I", "DJ", "UP", "B", "SIM"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["django_catch_a_log"]
forced-separate = ["tests"]
lines-after-imports = 2
lines-between-types = 0
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
